# HUJI_OS_EX3

./: CMakeLists.txt  Makefile  MapReduceFramework.cpp  MapReduceFramework.h  README  README.md  a.out  backup.cpp  cmakeReg  ex3.tar  ref.cpp  testfail.cpp
Atomic/: atomicdemo  atomicdemo.cpp  atomicdemo_multivar
Barrier/: Barrier.cpp  Barrier.h  ato  barrierdemo
Sample Client/: MapReduceFramework.cpp  SampleClient  SampleClient.cpp
Test/: a.out  test1-1_thread_1_process.cpp
Tests/: test1-1_thread_1_process.cpp
